...
    <string name="view_analytics_desc">Review the summary of the finished period</string>

    <!-- Edit Transaction -->
    <string name="edit_recurrent_expense_title">Edit recurrent expense</string>
    <string name="edit_expense_title">Edit expense</string>
    <string name="cancel_edit_content_desc">Cancel edit</string>
    <string name="tap_to_exit_edit_transaction">Tap to exit</string>
    <string name="configure_recurrence">Configure recurrence</string>
    <string name="make_recurrent">Make recurrent</string>
    <string name="select_time">Select time</string>
    <string name="billing_day">Billing day</string>
    <string name="end_date">End date</string>
    <string name="frequency_label">Frequency</string>
...

    <plurals name="analytics_days_left">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="total_budget">Total budget</string>
    <string name="minimum_spent">Minimum spent</string>
    <string name="maximum_spent">Maximum spent</string>
    <string name="average_spent">Average per day spent</string>

    <string name="days_remaining_label">Days\nremaining</string>

...
